--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ theme:
         - navigation.footer
         - navigation.indexes
     icon:
-        repo: fontawesome/brands/github
+        repo: fontawesome/brands/git-alt
         admonition:
             note: material/alert
     logo:
@@ -68,5 +68,10 @@ plugins:
 
 extra:
     social:
-          - icon: fontawesome/brands/github
+          - icon: fontawesome/brands/git-alt
             link: https://github.com/truepeak78/ag1
+
+          - icon: material/bug
+            link: https://github.com/truepeak78/ag1/issues/new
+            name: Report an Issue
+
